# personal_financial_advisor

./: .env.example  .gitignore  LIMITATIONS.md  README.md  pyproject.toml
src/advisor/: agent.py  app.py  config.py  profile.py  prompts.py  rebalancing.py  research.py  risk.py  strategy.py  webapp.py
tests/: test_agent_flow.py  test_profil_normalisierung.py  test_rebalancing.py  test_research.py  test_risk_strategy.py  test_webapp.py
